src/objects/Historical_Case_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Case_Comment_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Case Comment Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentBody__c</fullName>
        <label>CommentBody</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentId</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Historcal_Case_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks_Date__c</fullName>
        <label>Remarks Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_From__c</fullName>
        <label>Route From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Historical Case Comment</label>
    <nameField>
        <displayFormat>CSS-{0000}</displayFormat>
        <label>Historical Case Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Case Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>